# Trend-Aware-Music-Discovery-Env

./: .gitignore  Dockerfile  Knowlege.md  README.md  __init__.py  client.py  gradio_ui.py  inference.py  main.py  models.py  music_discovery_proto.py  music_discovery_proto_v2.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: build_catalog.py
server/: __init__.py  app.py  catalog.json  music_discovery_env_environment.py
